2011-08-29  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Gunar Gunnarsson
	* server-src/amvault.pl: Cast $dump->{'kb'} to int.

2011-08-24  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: Update S3 location url.

2011-08-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/match.c: Fix for 'Trailing backslash' error
	* common-src/match-test.c: Add test

2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c, client-src/calcsize.c,
	  client-src/killpgrp.c, client-src/noop.c,
	  client-src/rundump.c, client-src/runtar.c,
	  client-src/selfcheck.c, client-src/sendbackup.c,
	  client-src/sendsize.c, ndmp-src/amndmjob_main.c,
	  server-src/amcleanupdisk.c, server-src/amindexd.c,
	  server-src/amtrmidx.c, server-src/amtrmlog.c,
	  server-src/driver.c, server-src/dumper.c,
	  server-src/planner.c: Add a --version argument.

2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amservice.c, recover-src/amrecover.c,
	  server-src/amflush.c: #include "getopt.h"

2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: add ARCHIVEDIR, CLEANUPWAL, DB,
	  HOST, MAX-WAL-WAIT, PASSFILE, PORT, PSQL-PATH and USER
	  properties.
	* man/xml-source/ampgsql.8.xml: Document them.

2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amservice.c, recover-src/amrecover.c,
	  server-src/amcheck.c, server-src/amflush.c: Add a --version argument.

2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Check return value of fgets.

2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* many */*.pl: add --version option.

2011-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: print to debug file and server if unlink
	  fail.

2011-07-25  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amgtar.8.xml, man/xml-source/amraw.8.xml,